// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> Should render <LoggedInLinks /> if user is logged in 1`] = `
<styled.header>
  <Link
    to="/products?p=1"
  >
    <header
      className="header"
    >
      <img
        alt="E-Shopping"
        className="logo"
        src="logo.png"
      />
      <Heading
        align="left"
        className="heading"
        lineHeight=""
        mgBottom=""
        mgTop=""
        variant="h1"
      >
        shopping
      </Heading>
    </header>
  </Link>
  <SearchForm />
  <LoggedInLinks
    status="active"
    username="username"
  />
</styled.header>
`;

exports[`<Navbar /> Should render <LoggedOutLinks /> if user is logged out 1`] = `
<styled.header>
  <Link
    to="/products?p=1"
  >
    <header
      className="header"
    >
      <img
        alt="E-Shopping"
        className="logo"
        src="logo.png"
      />
      <Heading
        align="left"
        className="heading"
        lineHeight=""
        mgBottom=""
        mgTop=""
        variant="h1"
      >
        shopping
      </Heading>
    </header>
  </Link>
  <SearchForm />
  <SignedOutLinks />
</styled.header>
`;
